# build-control-backend

./: .cz.toml  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  fabfile.py  pyproject.toml
app/: main.py
app/common/: __init__.py  auth.py  constants.py  exceptions.py  models.py  repository.py  schemas.py
app/communication/: sms.py
app/core/: __init__.py  config.py  models.py
app/db/: session.py
app/otp/: models.py  repository.py  services.py
app/projects/: api.py  enums.py  models.py  repository.py  schemas.py  services.py
app/router/: api.py
app/users/: api.py  models.py  repository.py  schemas.py  services.py
app/utils/: datetime.py
migrations/: env.py
migrations/versions/: 58148bb4e79f_create_user_table.py  648967a40a8a_add_users_table.py  845dff9ecde5_update_user_table.py  9b2e385974f5_add_otp_table.py  b742e4179c44_add_project_model.py  ea66bd0f0b6a_add_password_to_user.py
