[project]
name = "buildcontrol-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fabric>=3.2.2",
    "fastapi[standard]>=0.123.8",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "pre-commit>=4.5.0",
]
